test/corpus/new_sdc_commands.txt
==================
set_case_analysis
==================

set_case_analysis 0 [get_ports test_mode]

---

(source_file
  (sdc_constraint_command
    name: (sdc_command_name)
    arguments: (word_list
      (simple_word)
      (command_substitution
        (sdc_query_command
          name: (sdc_query_name)
          arguments: (word_list
            (simple_word)))))))

==================
set_max_capacitance
==================

set_max_capacitance 0.5 [get_ports data_out]

---

(source_file
  (sdc_constraint_command
    name: (sdc_command_name)
    arguments: (word_list
      (simple_word)
      (command_substitution
        (sdc_query_command
          name: (sdc_query_name)
          arguments: (word_list
            (simple_word)))))))

==================
set_operating_conditions with options
==================

set_operating_conditions -max slow -min fast

---

(source_file
  (sdc_constraint_command
    name: (sdc_command_name)
    arguments: (word_list
      (option_flag)
      (simple_word)
      (option_flag)
      (simple_word))))

==================
set_ideal_network
==================

set_ideal_network [get_ports reset]

---

(source_file
  (sdc_constraint_command
    name: (sdc_command_name)
    arguments: (word_list
      (command_substitution
        (sdc_query_command
          name: (sdc_query_name)
          arguments: (word_list
            (simple_word)))))))

==================
set_timing_derate
==================

set_timing_derate -early 0.95 -cell_delay [get_cells cpu/*]

---

(source_file
  (sdc_constraint_command
    name: (sdc_command_name)
    arguments: (word_list
      (option_flag)
      (simple_word)
      (option_flag)
      (command_substitution
        (sdc_query_command
          name: (sdc_query_name)
          arguments: (word_list
            (simple_word)))))))

==================
current_instance query
==================

current_instance top/cpu

---

(source_file
  (sdc_query_command
    name: (sdc_query_name)
    arguments: (word_list
      (simple_word))))
