test/corpus/sdc_commands.txt
==================
SDC constraint command with options
==================

create_clock -period 10 -name clk [get_ports clk]

---

(source_file
  (sdc_constraint_command
    name: (sdc_command_name)
    arguments: (word_list
      (option_flag)
      (simple_word)
      (option_flag)
      (simple_word)
      (command_substitution
        (sdc_query_command
          name: (sdc_query_name)
          arguments: (word_list
            (simple_word)))))))

==================
set_input_delay with clock reference
==================

set_input_delay -clock clk -max 2.0 [get_ports data_in]

---

(source_file
  (sdc_constraint_command
    name: (sdc_command_name)
    arguments: (word_list
      (option_flag)
      (simple_word)
      (option_flag)
      (simple_word)
      (command_substitution
        (sdc_query_command
          name: (sdc_query_name)
          arguments: (word_list
            (simple_word)))))))

==================
set_false_path
==================

set_false_path -from [get_clocks clk1] -to [get_clocks clk2]

---

(source_file
  (sdc_constraint_command
    name: (sdc_command_name)
    arguments: (word_list
      (option_flag)
      (command_substitution
        (sdc_query_command
          name: (sdc_query_name)
          arguments: (word_list
            (simple_word))))
      (option_flag)
      (command_substitution
        (sdc_query_command
          name: (sdc_query_name)
          arguments: (word_list
            (simple_word)))))))

==================
set_multicycle_path with setup
==================

set_multicycle_path -setup 2 -from [get_cells reg1] -to [get_cells reg2]

---

(source_file
  (sdc_constraint_command
    name: (sdc_command_name)
    arguments: (word_list
      (option_flag)
      (simple_word)
      (option_flag)
      (command_substitution
        (sdc_query_command
          name: (sdc_query_name)
          arguments: (word_list
            (simple_word))))
      (option_flag)
      (command_substitution
        (sdc_query_command
          name: (sdc_query_name)
          arguments: (word_list
            (simple_word)))))))

==================
create_generated_clock
==================

create_generated_clock -name gen_clk -source [get_ports clk] -divide_by 2 [get_pins div/Q]

---

(source_file
  (sdc_constraint_command
    name: (sdc_command_name)
    arguments: (word_list
      (option_flag)
      (simple_word)
      (option_flag)
      (command_substitution
        (sdc_query_command
          name: (sdc_query_name)
          arguments: (word_list
            (simple_word))))
      (option_flag)
      (simple_word)
      (command_substitution
        (sdc_query_command
          name: (sdc_query_name)
          arguments: (word_list
            (simple_word)))))))

==================
set_case_analysis
==================

set_case_analysis 0 [get_ports test_mode]

---

(source_file
  (sdc_constraint_command
    name: (sdc_command_name)
    arguments: (word_list
      (simple_word)
      (command_substitution
        (sdc_query_command
          name: (sdc_query_name)
          arguments: (word_list
            (simple_word)))))))

==================
set_max_capacitance
==================

set_max_capacitance 0.5 [get_ports data_out]

---

(source_file
  (sdc_constraint_command
    name: (sdc_command_name)
    arguments: (word_list
      (simple_word)
      (command_substitution
        (sdc_query_command
          name: (sdc_query_name)
          arguments: (word_list
            (simple_word)))))))

==================
set_operating_conditions with options
==================

set_operating_conditions -max slow -min fast

---

(source_file
  (sdc_constraint_command
    name: (sdc_command_name)
    arguments: (word_list
      (option_flag)
      (simple_word)
      (option_flag)
      (simple_word))))

==================
set_ideal_network
==================

set_ideal_network [get_ports reset]

---

(source_file
  (sdc_constraint_command
    name: (sdc_command_name)
    arguments: (word_list
      (command_substitution
        (sdc_query_command
          name: (sdc_query_name)
          arguments: (word_list
            (simple_word)))))))

==================
set_timing_derate
==================

set_timing_derate -early 0.95 -cell_delay [get_cells cpu/*]

---

(source_file
  (sdc_constraint_command
    name: (sdc_command_name)
    arguments: (word_list
      (option_flag)
      (simple_word)
      (option_flag)
      (command_substitution
        (sdc_query_command
          name: (sdc_query_name)
          arguments: (word_list
            (simple_word)))))))

==================
set_max_skew
==================

set_max_skew 0.1 -from [get_clocks clk1] -to [get_clocks clk2]

---

(source_file
  (sdc_constraint_command
    name: (sdc_command_name)
    arguments: (word_list
      (simple_word)
      (option_flag)
      (command_substitution
        (sdc_query_command
          name: (sdc_query_name)
          arguments: (word_list
            (simple_word))))
      (option_flag)
      (command_substitution
        (sdc_query_command
          name: (sdc_query_name)
          arguments: (word_list
            (simple_word)))))))

==================
set_clock_sense
==================

set_clock_sense -positive [get_pins clk_buf/Z]

---

(source_file
  (sdc_constraint_command
    name: (sdc_command_name)
    arguments: (word_list
      (option_flag)
      (command_substitution
        (sdc_query_command
          name: (sdc_query_name)
          arguments: (word_list
            (simple_word)))))))

==================
set_logic_one
==================

set_logic_one [get_ports tie_hi]

---

(source_file
  (sdc_constraint_command
    name: (sdc_command_name)
    arguments: (word_list
      (command_substitution
        (sdc_query_command
          name: (sdc_query_name)
          arguments: (word_list
            (simple_word)))))))

==================
set_logic_dc
==================

set_logic_dc [get_ports scan_en]

---

(source_file
  (sdc_constraint_command
    name: (sdc_command_name)
    arguments: (word_list
      (command_substitution
        (sdc_query_command
          name: (sdc_query_name)
          arguments: (word_list
            (simple_word)))))))

==================
set_logic_zero
==================

set_logic_zero [get_ports tie_lo]

---

(source_file
  (sdc_constraint_command
    name: (sdc_command_name)
    arguments: (word_list
      (command_substitution
        (sdc_query_command
          name: (sdc_query_name)
          arguments: (word_list
            (simple_word)))))))

==================
set_temperature
==================

set_temperature 125

---

(source_file
  (sdc_constraint_command
    name: (sdc_command_name)
    arguments: (word_list
      (simple_word))))

==================
set_switching_activity
==================

set_switching_activity -toggle_rate 0.5 [get_nets data_bus*]

---

(source_file
  (sdc_constraint_command
    name: (sdc_command_name)
    arguments: (word_list
      (option_flag)
      (simple_word)
      (command_substitution
        (sdc_query_command
          name: (sdc_query_name)
          arguments: (word_list
            (simple_word)))))))

==================
set_slew_derate_from_library
==================

set_slew_derate_from_library 0.8

---

(source_file
  (sdc_constraint_command
    name: (sdc_command_name)
    arguments: (word_list
      (simple_word))))

==================
derive_clock_uncertainty
==================

derive_clock_uncertainty -add

---

(source_file
  (sdc_constraint_command
    name: (sdc_command_name)
    arguments: (word_list
      (option_flag))))
